# helper-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
src/: config.example.py  constants.py  helper_bot.py  main.py
src/modules/auto_mod/: auto_delete.py
src/modules/auto_response/: autoresponder.py  dev_autoresponder.py  modals.py  shared_cache.py
src/modules/commands/: activity.py  api.py  autoresponder.py  groupapi.py  linear.py  logchannel.py  ping.py  reset_tag.py  stats.py  tag.py  translate.py  whois.py
src/modules/events/: on_command_error.py  on_interaction.py  on_message.py  on_ready.py
src/modules/premium_support/: buttons.py  send_message.py
src/resources/: checks.py  constants.py  exceptions.py  helper_bot.py  linear_api.py  responder_parsing.py  secrets.py
src/resources/models/: autoresponse.py  database.py  interaction_data.py
src/resources/utils/: base_embeds.py  timed_user_cooldown.py
tests/: test_triggers.py
