[tool.poetry]
name = "bloxlink-helper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.2"
motor = { extras = ["srv"], version = "^3.3.1" }
requests = "^2.31.0"
certifi = "^2023.7.22"
psutil = "^5.9.5"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
