[project]
name = "bloxlink-helper"
version = "0.1.0"
description = ""
authors = [{ name = "", email = "example@example.org" }]
requires-python = ">=3.11"
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.2"
motor = { extras = ["srv"], version = "^3.3.1" }
requests = "^2.31.0"
certifi = "^2025"
psutil = "^7.0.0"
googletrans-py = "4.0.0"
textdistance = "^4.6.0"

[tool.poetry.group.dev.dependencies]
black = "^25.0.0"
isort = "^6.0.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
